datasource db {
  provider = "postgresql"
  url      = env("DATABASE_URL")
}

generator client {
  provider = "prisma-client-js"
  // previewFeatures = []
}

generator dbml {
  provider = "prisma-dbml-generator"
}

enum Role {
  ADMIN
  USER
}

enum SignInProvider {
  ANONYMOUS @map("anonymous")
  GOOGLE    @map("google.com")
  PASSWORD  @map("password")
}

model User {
  id             String          @id @default(dbgenerated("gen_random_uuid()")) @db.Uuid
  createdAt      DateTime        @default(now())
  updatedAt      DateTime        @updatedAt
  password       String?         @db.VarChar(255)
  name           String?         @db.VarChar(255)
  role           Role            @default(USER)
  phone          String?         @unique @db.VarChar(255)
  firebaseId     String?         @unique @db.VarChar(255)
  email          String?         @unique @db.VarChar(255)
  deviceId       String?         @db.VarChar(255)
  signInProvider SignInProvider?
  emailVerified  Boolean?

  ClientStat         ClientStat[]
  GoogleSubscription GoogleSubscription[]
}

// android
// {
//   "dailyTrafficLimit": "1.2.1",
//   "currentVersion": "1.2.1",
//   "foreUpdateVersion": "1.1.0"
// }
model ClientInfo {
  id           String   @id @default(dbgenerated("gen_random_uuid()")) @db.Uuid
  createdAt    DateTime @default(now())
  updatedAt    DateTime @updatedAt
  android      Json?
  ios          Json?
  subscription Json?
}

model File {
  id        String   @id @default(dbgenerated("gen_random_uuid()")) @db.Uuid
  createdAt DateTime @default(now())
  updatedAt DateTime @updatedAt
  userId    String   @db.Uuid
  name      String   @db.VarChar(255)

  @@index([userId], name: "FileUserIdIndex")
}

enum ServerCountry {
  IR
  NL
  DE
  TR
  FI
  US
  SG
}

enum InboundType {
  VLESS_TCP
  VLESS_WS_TLS
}

model Server {
  id           String        @id @default(dbgenerated("gen_random_uuid()")) @db.Uuid
  createdAt    DateTime      @default(now())
  updatedAt    DateTime      @updatedAt
  deletedAt    DateTime?
  type         ServerCountry
  port         Int           @default(443)
  ip           String        @db.VarChar(255)
  domain       String        @db.VarChar(255)
  inboundId    Int           @default(1)
  token        String
  tunnelDomain String        @db.VarChar(255)
  stats        Json?
  isPremium    Boolean       @default(true)
  inboundType  InboundType   @default(VLESS_TCP)

  clientStat ClientStat[]
}

model ClientStat {
  id              String    @id @default(dbgenerated("gen_random_uuid()")) @db.Uuid
  createdAt       DateTime  @default(now())
  updatedAt       DateTime  @updatedAt
  deletedAt       DateTime?
  serverId        String    @db.Uuid
  userId          String    @db.Uuid
  lastTotalUsage  BigInt?
  lastConnectedAt DateTime?
  expiryTime      BigInt
  total           BigInt
  down            BigInt
  up              BigInt
  email           String    @db.VarChar(255)
  enable          Boolean
  flow            String    @db.VarChar(255)
  subId           String    @db.VarChar(255)
  tgId            String    @db.VarChar(255)
  limitIp         Int

  user   User   @relation(fields: [userId], references: [id])
  server Server @relation(fields: [serverId], references: [id])

  @@index([serverId], name: "ClientStatServerIdIndex")
  @@index([userId], name: "ClientStatUserIdIndex")
  @@index([expiryTime], name: "ClientStatExpiryTimeIndex")
  @@index([total], name: "ClientStatTotalIndex")
  @@index([down], name: "ClientStatDownIndex")
  @@index([up], name: "ClientStatUpIndex")
  @@index([deletedAt], name: "ClientDeletedAtIndex")
}

// https://developers.google.com/android-publisher/api-ref/rest/v3/purchases.subscriptions#SubscriptionPurchase

// enum CancelReason {
//   USER_CANCELED          // 0: User canceled the subscription.
//   SYSTEM_CANCELED        // 1: Subscription was canceled by the system.
//   REPLACED               // 2: Subscription was replaced with a new subscription.
//   DEVELOPER_CANCELED     // 3: Subscription was canceled by the developer.
// }

// enum PaymentState {
//   PAYMENT_PENDING                      // 0: Payment pending.
//   PAYMENT_RECEIVED                     // 1: Payment received.
//   FREE_TRIAL                           // 2: Free trial.
//   PENDING_DEFERRED_UPGRADE_DOWNGRADE   // 3: Pending deferred upgrade/downgrade.
// }

// enum PromotionType {
//   ONE_TIME_CODE    // 0: One-time code.
//   VANITY_CODE      // 1: Vanity code.
// }

// enum PurchaseType {
//   TEST   // 0: Test purchase.
//   PROMO  // 1: Promo purchase.
// }
model GoogleSubscription {
  id                          String    @id @default(dbgenerated("gen_random_uuid()")) @db.Uuid
  createdAt                   DateTime  @default(now())
  updatedAt                   DateTime  @updatedAt
  userId                      String?   @db.Uuid
  purchaseToken               String
  packageName                 String    @db.VarChar(255)
  subscriptionId              String    @db.VarChar(255)
  kind                        String    @db.VarChar(255)
  startTimeMillis             DateTime
  expiryTimeMillis            DateTime
  autoResumeTimeMillis        DateTime?
  autoRenewing                Boolean
  priceCurrencyCode           String    @db.VarChar(255)
  priceAmountMicros           BigInt
  countryCode                 String    @db.VarChar(255)
  developerPayload            String
  paymentState                Int?
  cancelReason                Int?
  userCancellationTimeMillis  DateTime?
  orderId                     String    @unique @db.VarChar(255)
  linkedPurchaseToken         String?
  purchaseType                Int?
  profileName                 String?   @db.VarChar(255)
  emailAddress                String?   @db.VarChar(255)
  givenName                   String?   @db.VarChar(255)
  familyName                  String?   @db.VarChar(255)
  profileId                   String?   @db.VarChar(255)
  acknowledgementState        Int
  externalAccountId           String?   @db.VarChar(255)
  promotionType               Int?
  promotionCode               String?   @db.VarChar(255)
  obfuscatedExternalAccountId String?   @db.VarChar(255)
  obfuscatedExternalProfileId String?   @db.VarChar(255)

  user User? @relation(fields: [userId], references: [id])

  @@index([userId], name: "GoogleSubscriptionUserIdIndex")
  @@index([expiryTimeMillis], name: "GoogleSubscriptionExpiryTimeMillisIndex")
  @@index([paymentState, cancelReason, expiryTimeMillis], name: "GoogleSubscriptionCompositeIndex")
}

// model UserPackage {
//   id             String    @id @default(dbgenerated("gen_random_uuid()")) @db.Uuid
//   createdAt      DateTime  @default(now())
//   updatedAt      DateTime  @updatedAt
//   deletedAt      DateTime?
//   name           String    @db.VarChar(255)
//   userId         String    @db.Uuid
//   serverId       String    @db.Uuid
//   statId         String    @db.Uuid
//   lastTotalUsage BigInt?

//   user   User       @relation(fields: [userId], references: [id])
//   server Server     @relation(fields: [serverId], references: [id])
//   stat   ClientStat @relation(fields: [statId], references: [id])

//   @@index([userId], name: "UserPackageUserIdIndex")
//   @@index([serverId], name: "UserPackageServerIdIndex")
//   @@index([statId], name: "UserPackageStatIdIndex")
// }

// model DailyUsage {
//   id           String   @id @default(dbgenerated("gen_random_uuid()")) @db.Uuid
//   date         DateTime @default(now()) // Track usage by date
//   dataUsed     BigInt // Total data used on this day
//   clientStatId String   @db.Uuid

//   clientStat ClientStat @relation(fields: [clientStatId], references: [id])

//   @@unique([date, clientStatId], name: "UniqueDailyUsagePerClient")
// }
