//// ------------------------------------------------------
//// THIS FILE WAS AUTOMATICALLY GENERATED (DO NOT MODIFY)
//// ------------------------------------------------------

Table User {
  id String [pk]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  password String
  name String
  role Role [not null, default: 'USER']
  phone String [unique]
  firebaseId String [unique]
  email String [unique]
  deviceId String
  signInProvider SignInProvider
  emailVerified Boolean
  ClientStat ClientStat [not null]
  GoogleSubscription GoogleSubscription [not null]
}

Table ClientInfo {
  id String [pk]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  android Json
  ios Json
  subscription Json
}

Table File {
  id String [pk]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  userId String [not null]
  name String [not null]
}

Table Server {
  id String [pk]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  deletedAt DateTime
  type ServerCountry [not null]
  port Int [not null, default: 443]
  ip String [not null]
  domain String [not null]
  inboundId Int [not null, default: 1]
  token String [not null]
  tunnelDomain String [not null]
  stats Json
  isPremium Boolean [not null, default: true]
  inboundType InboundType [not null, default: 'VLESS_TCP']
  clientStat ClientStat [not null]
}

Table ClientStat {
  id String [pk]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  deletedAt DateTime
  serverId String [not null]
  userId String [not null]
  lastTotalUsage BigInt
  lastConnectedAt DateTime
  expiryTime BigInt [not null]
  total BigInt [not null]
  down BigInt [not null]
  up BigInt [not null]
  email String [not null]
  enable Boolean [not null]
  flow String [not null]
  subId String [not null]
  tgId String [not null]
  limitIp Int [not null]
  user User [not null]
  server Server [not null]
}

Table GoogleSubscription {
  id String [pk]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  userId String
  purchaseToken String [not null]
  packageName String [not null]
  subscriptionId String [not null]
  kind String [not null]
  startTimeMillis DateTime [not null]
  expiryTimeMillis DateTime [not null]
  autoResumeTimeMillis DateTime
  autoRenewing Boolean [not null]
  priceCurrencyCode String [not null]
  priceAmountMicros BigInt [not null]
  countryCode String [not null]
  developerPayload String [not null]
  paymentState Int
  cancelReason Int
  userCancellationTimeMillis DateTime
  orderId String [unique, not null]
  linkedPurchaseToken String
  purchaseType Int
  profileName String
  emailAddress String
  givenName String
  familyName String
  profileId String
  acknowledgementState Int [not null]
  externalAccountId String
  promotionType Int
  promotionCode String
  obfuscatedExternalAccountId String
  obfuscatedExternalProfileId String
  user User
}

Enum Role {
  ADMIN
  USER
}

Enum SignInProvider {
  ANONYMOUS
  GOOGLE
  PASSWORD
}

Enum ServerCountry {
  IR
  NL
  DE
  TR
  FI
  US
  SG
}

Enum InboundType {
  VLESS_TCP
  VLESS_WS_TLS
}

Ref: ClientStat.userId > User.id

Ref: ClientStat.serverId > Server.id

Ref: GoogleSubscription.userId > User.id